# Stereo-to-5.1

./: CMakeLists.txt  LICENSE  README.md
Source/: Main.cpp  MainComponent.cpp  MainComponent.h  ThemeColours.h  UIComponents.cpp  UIComponents.h  UpmixEngine.cpp  UpmixEngine.h
tests/: UpmixEngineSmokeTest.cpp
